--- a/Tests/UnitTests/Fatras/CMakeLists.txt
+++ b/Tests/UnitTests/Fatras/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(EventData)
+add_subdirectory(Digitization)
 add_subdirectory(Kernel)
 add_subdirectory(Physics)
 add_subdirectory(Selectors)
