specifying 3D in visulation naming

--- a/Core/src/Visualization/CMakeLists.txt
+++ b/Core/src/Visualization/CMakeLists.txt
@@ -1,7 +1,7 @@
 target_sources_local(
   ActsCore
   PRIVATE
-    IVisualization.cpp
-    GeometryView.cpp
-    EventDataView.cpp
+    IVisualization3D.cpp
+    GeometryView3D.cpp
+    EventDataView3D.cpp
 )
