--- a/Tests/UnitTests/Core/Visualization/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Visualization/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_unittest(Visualization VisualizationTests.cpp)
-add_unittest(EventDataView EventDataViewTests.cpp)
-add_unittest(PrimitivesViewT PrimitivesViewTests.cpp)
-add_unittest(SurfaceView SurfaceViewTests.cpp)
-add_unittest(TrackingGeometryView TrackingGeometryViewTests.cpp)
-add_unittest(VolumeView VolumeViewTests.cpp)
+add_unittest(Visualization3D VisualizationTests.cpp)
+add_unittest(EventDataView3D EventDataView3DTests.cpp)
+add_unittest(PrimitivesView3D PrimitivesViewTests.cpp)
+add_unittest(SurfaceView3D SurfaceViewTests.cpp)
+add_unittest(TrackingGeometryView3D TrackingGeometryView3DTests.cpp)
+add_unittest(VolumeView3D VolumeView3DTests.cpp)
