--- a/Examples/Io/Json/CMakeLists.txt
+++ b/Examples/Io/Json/CMakeLists.txt
@@ -1,12 +1,13 @@
 add_library(
   ActsExamplesIoJson SHARED
-  src/JsonMaterialWriter.cpp)
+  src/JsonMaterialWriter.cpp
+  src/JsonDigitizationConfig.cpp)
 target_include_directories(
   ActsExamplesIoJson
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 target_link_libraries(
   ActsExamplesIoJson
-  PUBLIC ActsCore ActsPluginJson ActsExamplesFramework)
+  PUBLIC ActsCore ActsPluginJson ActsExamplesFramework ActsExamplesDigitization)
 
 install(
   TARGETS ActsExamplesIoJson
