first version of geant4 simulation

--- a/Examples/Algorithms/Geant4/CMakeLists.txt
+++ b/Examples/Algorithms/Geant4/CMakeLists.txt
@@ -1,25 +1,28 @@
 add_library(
   ActsExamplesGeant4 SHARED
-  src/EventAction.cpp
+  src/EventStoreRegistry.cpp
   src/GdmlDetectorConstruction.cpp
-  src/GeantinoRecording.cpp
-  src/Geant4Options.cpp
-  src/PrimaryGeneratorAction.cpp
-  src/RunAction.cpp
-  src/SteppingAction.cpp)
-target_compile_definitions(
-  ActsExamplesGeant4
-  PUBLIC ${Geant4_DEFINITIONS})
+  src/Geant4Options.cpp  
+  src/Geant4MaterialRecording.cpp
+  src/MaterialEventAction.cpp
+  src/MaterialRunAction.cpp
+  src/MaterialSteppingAction.cpp
+  src/MaterialGeneratorAction.cpp
+  src/Geant4Simulation.cpp
+  src/Geant4SurfaceMapper.cpp
+  src/SimulationMagneticField.cpp
+  src/SimulationGeneratorAction.cpp
+  src/SimulationSteppingAction.cpp
+  src/SimulationTrackingAction.cpp)
 target_include_directories(
   ActsExamplesGeant4
-  SYSTEM PUBLIC ${Geant4_INCLUDE_DIRS})
+  SYSTEM PUBLIC ${HEPMC3_INCLUDE_DIR})
 target_include_directories(
-  ActsExamplesGeant4
+    ActsExamplesGeant4
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
 target_link_libraries(
   ActsExamplesGeant4
-  PUBLIC ActsCore ActsExamplesFramework ${Geant4_LIBRARIES}
-  PRIVATE Boost::program_options)
+  PUBLIC ActsCore ActsExamplesFramework ${Geant4_LIBRARIES} Boost::program_options)
 
 install(
   TARGETS ActsExamplesGeant4
