--- a/Examples/Run/Geant4/CMakeLists.txt
+++ b/Examples/Run/Geant4/CMakeLists.txt
@@ -1,8 +1,10 @@
+add_subdirectory(Common)
+
 add_executable(
-  ActsExampleGeantinoRecordingGdml
-  GdmlGeantinoRecording.cpp)
+  ActsExampleMaterialRecordingGdml
+  GdmlMaterialRecording.cpp)
 target_link_libraries(
-  ActsExampleGeantinoRecordingGdml
+  ActsExampleMaterialRecordingGdml
   PRIVATE
     ActsExamplesCommon
     ActsExamplesFramework
@@ -12,8 +14,27 @@ target_link_libraries(
 
 install(
   TARGETS 
-    ActsExampleGeantinoRecordingGdml 
+    ActsExampleMaterialRecordingGdml 
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+add_executable(
+  ActsExampleSimulationGdml
+  GdmlSimulation.cpp)
+target_link_libraries(
+  ActsExampleSimulationGdml
+  PRIVATE
+    ActsExamplesCommon
+    ActsExamplesFramework
+    ActsExamplesGeant4
+    ActsExamplesGeant4Common
+    ActsExamplesMagneticField
+    ActsExamplesIoRoot
+    Boost::program_options)
+
+install(
+  TARGETS 
+  ActsExampleSimulationGdml 
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 add_subdirectory_if(DD4hep ACTS_BUILD_EXAMPLES_DD4HEP)
-add_subdirectory_if(HepMC ACTS_BUILD_EXAMPLES_DD4HEP AND ACTS_BUILD_EXAMPLES_HEPMC3)
+#add_subdirectory_if(HepMC ACTS_BUILD_EXAMPLES_DD4HEP AND ACTS_BUILD_EXAMPLES_HEPMC3)
