--- a/Examples/Run/Geant4/DD4hep/CMakeLists.txt
+++ b/Examples/Run/Geant4/DD4hep/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_executable(
-  ActsExampleGeantinoRecordingDD4hep
-  DD4hepGeantinoRecording.cpp)
+  ActsExampleMaterialRecordingDD4hep
+  DD4hepMaterialRecording.cpp)
 target_link_libraries(
-  ActsExampleGeantinoRecordingDD4hep
+  ActsExampleMaterialRecordingDD4hep
   PRIVATE
     ActsExamplesCommon
     ActsExamplesDetectorDD4hep
@@ -13,5 +13,26 @@ target_link_libraries(
     Boost::program_options)
 
 install(
-  TARGETS ActsExampleGeantinoRecordingDD4hep
+  TARGETS ActsExampleMaterialRecordingDD4hep
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+add_executable(
+  ActsExampleSimulationDD4hep
+  DD4hepSimulation.cpp)
+target_link_libraries(
+  ActsExampleSimulationDD4hep
+  PRIVATE
+    ActsExamplesCommon
+    ActsExamplesFramework
+    ActsExamplesDetectorDD4hep
+    ActsExamplesGeant4
+    ActsExamplesGeant4Common
+    ActsExamplesGeant4DD4hep
+    ActsExamplesMagneticField
+    ActsExamplesIoRoot
+    Boost::program_options)
+
+install(
+  TARGETS 
+  ActsExampleSimulationDD4hep 
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
