--- a/Tests/UnitTests/Core/Utilities/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Utilities/CMakeLists.txt
@@ -7,6 +7,7 @@ add_unittest(BinningData BinningDataTests.cpp)
 add_unittest(BinUtility BinUtilityTests.cpp)
 add_unittest(BoundingBox BoundingBoxTest.cpp)
 add_unittest(Extendable ExtendableTests.cpp)
+add_unittest(Enumerate EnumerateTests.cpp)
 add_unittest(FiniteStateMachine FiniteStateMachineTests.cpp)
 add_unittest(Frustum FrustumTest.cpp)
 add_unittest(Grid GridTests.cpp)
