add index link implementation & tests

--- a/Tests/Benchmarks/CMakeLists.txt
+++ b/Tests/Benchmarks/CMakeLists.txt
@@ -25,6 +25,7 @@ add_benchmark(BoundaryCheck BoundaryCheckBenchmark.cpp)
 add_benchmark(BinUtility BinUtilityBenchmark.cpp)
 add_benchmark(CovarianceTransport CovarianceTransportBenchmark.cpp)
 add_benchmark(EigenStepper EigenStepperBenchmark.cpp)
+add_benchmark(IndexLinksBenchmark IndexLinksBenchmark.cpp)
 add_benchmark(SolenoidField SolenoidFieldBenchmark.cpp)
 add_benchmark(SurfaceIntersection SurfaceIntersectionBenchmark.cpp)
 add_benchmark(RayFrustumBenchmark RayFrustumBenchmark.cpp)
