adding grid binning detection and unit test for it

--- a/Core/src/Experimental/CMakeLists.txt
+++ b/Core/src/Experimental/CMakeLists.txt
@@ -1,4 +1,9 @@
 target_sources(
   ActsCore
   PRIVATE
-  GeometricExtent.cpp)
+  CylindricalPortalGenerators.cpp
+  CylindricalSurfaceLinksGenerators.cpp
+  GridBinningDetection.cpp
+  DetectorVolume.cpp
+  GeometricExtent.cpp
+  Portal.cpp)
