adding navigation state updators and tests for them

--- a/Tests/UnitTests/Core/Geometry/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Geometry/CMakeLists.txt
@@ -16,6 +16,8 @@ add_unittest(GeometryIdentifier GeometryIdentifierTests.cpp)
 add_unittest(LayerCreator LayerCreatorTests.cpp)
 add_unittest(Layer LayerTests.cpp)
 add_unittest(NavigationLayer NavigationLayerTests.cpp)
+add_unittest(NavigationState NavigationStateTests.cpp)
+add_unittest(NavigationStateUpdators NavigationStateUpdatorsTests.cpp)
 add_unittest(PlaneLayer PlaneLayerTests.cpp)
 add_unittest(ProtoLayer ProtoLayerTests.cpp)
 add_unittest(ProtoLayerHelper ProtoLayerHelperTests.cpp)
