adding portal generator and tests

--- a/Tests/UnitTests/Core/Geometry/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Geometry/CMakeLists.txt
@@ -24,6 +24,7 @@ add_unittest(ProtoLayer ProtoLayerTests.cpp)
 add_unittest(ProtoLayerHelper ProtoLayerHelperTests.cpp)
 add_unittest(Polyhedron PolyhedronTests.cpp)
 add_unittest(Portal PortalTests.cpp)
+add_unittest(PortalGenerators PortalGeneratorsTests.cpp)
 add_unittest(SimpleGeometry SimpleGeometryTests.cpp)
 add_unittest(SurfaceArrayCreator SurfaceArrayCreatorTests.cpp)
 add_unittest(SurfaceBinningMatcher SurfaceBinningMatcherTests.cpp)
