adding detector volume finder & tests

--- a/Tests/UnitTests/Core/Geometry/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Geometry/CMakeLists.txt
@@ -9,6 +9,7 @@ add_unittest(CylinderVolumeBounds CylinderVolumeBoundsTests.cpp)
 add_unittest(CylinderVolumeBuilder CylinderVolumeBuilderTests.cpp)
 add_unittest(DiscLayer DiscLayerTests.cpp)
 add_unittest(DetectorVolumeUpdators DetectorVolumeUpdatorsTests.cpp)
+add_unittest(DetectorVolumeFinders DetectorVolumeFindersTests.cpp)
 add_unittest(Extent ExtentTests.cpp)
 add_unittest(GenericApproachDescriptor GenericApproachDescriptorTests.cpp)
 add_unittest(GenericCuboidVolumeBounds GenericCuboidVolumeBoundsTests.cpp)
