feat-portal-volume-detector

--- a/Tests/UnitTests/Core/Geometry/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Geometry/CMakeLists.txt
@@ -8,6 +8,7 @@ add_unittest(CylinderLayer CylinderLayerTests.cpp)
 add_unittest(CylinderVolumeBounds CylinderVolumeBoundsTests.cpp)
 add_unittest(CylinderVolumeBuilder CylinderVolumeBuilderTests.cpp)
 add_unittest(DiscLayer DiscLayerTests.cpp)
+add_unittest(DetectorVolume DetectorVolumeTests.cpp)
 add_unittest(DetectorVolumeUpdators DetectorVolumeUpdatorsTests.cpp)
 add_unittest(DetectorVolumeFinders DetectorVolumeFindersTests.cpp)
 add_unittest(Extent ExtentTests.cpp)
