introducin GeometryId generation concept

--- a/Tests/UnitTests/Core/Geometry/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Geometry/CMakeLists.txt
@@ -17,6 +17,7 @@ add_unittest(GenericApproachDescriptor GenericApproachDescriptorTests.cpp)
 add_unittest(GenericCuboidVolumeBounds GenericCuboidVolumeBoundsTests.cpp)
 add_unittest(GeometryHierarchyMap GeometryHierarchyMapTests.cpp)
 add_unittest(GeometryIdentifier GeometryIdentifierTests.cpp)
+add_unittest(GeometryIdGenerators GeometryIdGeneratorsTests.cpp)
 add_unittest(LayerCreator LayerCreatorTests.cpp)
 add_unittest(Layer LayerTests.cpp)
 add_unittest(NavigationLayer NavigationLayerTests.cpp)
