--- a/Core/src/Geometry/CMakeLists.txt
+++ b/Core/src/Geometry/CMakeLists.txt
@@ -16,6 +16,7 @@ target_sources(
     DetectorVolume.cpp
     DiscLayer.cpp
     GenericApproachDescriptor.cpp
+    GeometryIdGenerators.cpp
     GenericCuboidVolumeBounds.cpp
     GeometryIdentifier.cpp
     GlueVolumesDescriptor.cpp
