--- a/Examples/Algorithms/MaterialMapping/CMakeLists.txt
+++ b/Examples/Algorithms/MaterialMapping/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(
   ActsExamplesMaterialMapping SHARED
-  src/MaterialMapping.cpp)
+  src/LegacyMaterialMapping.cpp src/MaterialMapping.cpp)
 target_include_directories(
   ActsExamplesMaterialMapping
   PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
